<resources>
    <string name="app_name">Button Application</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="your_password_must_be_at_least_8_characters_with_at_least_1_number_and_1_special_character">Ваш пароль должен состоять не менее чем из 8 символов. С как минимум 1 цифрой и 1 специальным символом</string>
    <string name="sign_in">Sign in</string>
    <string name="weak">Weak</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_activity">Login Activity</string>
</resources>